# CommitbyLee

./: .gitignore
core/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
core/commit_by_lee/: __init__.py  cli.py  config.py  diff_analyzer.py  formatters.py  llm_generator.py  ollama_client.py  utils.py
core/commit_by_lee.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
core/commit_by_lee/models/: __init__.py  schemas.py
docs/: commit-message-formats.md  deployment-guide.md  git-fix-guide.md  git-log-guide.md  github-release-guide.md  github-rerelease-guide.md  installation.md  preview-fix-summary.md  release-notes.md  revision-summary.md  update-github-release.md  usage.md  vscode-extension.md  vscode-shortcut-setup.md  vscode-usage-guide.md
scripts/: test-connection.py
vscode-extension/: .vscodeignore  CHANGELOG.md  INSTALL.md  INSTALL_INSTRUCTIONS.txt  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
vscode-extension/src/: extension.ts
vscode-extension/src/client/: git.ts  ollama.ts
vscode-extension/src/commands/: generateCommit.ts  openConfig.ts  testConnection.ts
vscode-extension/src/config/: schema.ts
vscode-extension/src/types/: index.ts
vscode-extension/src/utils/: commitMessageFormatter.ts  promptGenerator.ts
vscode-extension/webview/: commitPreview.ts
